src/utils/diag_formatter.re
#include "diag_formatter.hxx"
#include "../options.hxx"

static size_t
parse_integer(const char* p_begin, const char* p_end)
{
    size_t value = 0;
    while (p_begin != p_end) {
        value *= 10;
        value += *p_begin++ - '0';
    }
    return value;
}

void
p_diag_format_msg(struct PMsgBuffer* p_buffer, const char* p_msg, PDiagArgument* p_args, size_t p_arg_count)
{
    const char* cursor = p_msg;
    const char* marker;

    for (;;) {
        const char* saved_cursor = cursor;
        /*!re2c
            re2c:yyfill:enable    = 0;
            re2c:encoding:utf8    = 0;
            re2c:indent:string    = "    ";
            re2c:define:YYCTYPE   = "char";

            re2c:define:YYCURSOR   = "cursor";
            re2c:define:YYMARKER   = "marker";

            integer = [0-9]+;

            "{" integer "}" {
                int arg_idx = parse_integer(saved_cursor + 1, cursor - 1);
                assert(arg_idx < p_arg_count);
                PDiagArgument arg = p_args[arg_idx];
                p_diag_format_arg(p_buffer, &arg);
                continue;
            }

            "%" integer "s" {
                int arg_idx = parse_integer(saved_cursor + 1, cursor - 1);
                assert(arg_idx < p_arg_count);
                assert(p_args[arg_idx].type == P_DAT_INT);
                if (p_args[arg_idx].value_int > 1) {
                    write_buffer_str(p_buffer, "s");
                }

                continue;
            }

            "<%" {
                if (g_options.opt_diagnostics_color)
                    write_buffer_str(p_buffer, "\x1b[1m");
                write_buffer_str(p_buffer, "'");
                continue;
            }

            "%>" {
                write_buffer_str(p_buffer, "'");
                if (g_options.opt_diagnostics_color)
                    write_buffer_str(p_buffer, "\x1b[0m");
                continue;
            }
            
            "\x00" {
                break;
            }

            * {
                write_buffer(p_buffer, saved_cursor, cursor - saved_cursor);
                continue;
            }
        */
    }

    *p_buffer->it = '\0';
}
